# http-debugger

./: .gitignore  CMakeLists.txt  README.md
i18n/: en.ts  zh_CN.ts
resources/: http-debugger.rc
resources/images/: icon.icns
scripts/: macos-deploy.sh  windows-deploy.bat
src/: MainWidget.cpp  MainWidget.h  MainWidget.ui  main.cpp
